--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,18 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.13</version>
         </dependency>
-    </dependencies>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20170516</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.0.pr4</version>
+        </dependency>
 
+    </dependencies>
 </project>
